Bug 154990 - PDF/UA Content controls generate ""Widget" annotation not nested inside a "Form" structure element" error message in PAC tool
Summary: PDF/UA Content controls generate ""Widget" annotation not nested inside a "Fo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.5.6 target:7.6.1
Keywords: accessibility
Depends on: 154984
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2023-04-24 18:10 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-31 20:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (11.71 KB, application/vnd.oasis.opendocument.text)
2023-04-24 18:10 UTC, Gabor Kelemen (Collabora)
Details
The example file in Writer and its PDF version in PAC tool (109.20 KB, image/png)
2023-04-24 18:11 UTC, Gabor Kelemen (Collabora)
Details
Slightly changed up version of the document that is fine (11.77 KB, application/vnd.oasis.opendocument.text)
2023-04-24 18:12 UTC, Gabor Kelemen (Collabora)
Details
The good example file in Writer and PAC tool (137.33 KB, image/png)
2023-04-24 18:13 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-24 18:10:34 UTC
Created attachment 186890 [details]
Example file from Writer

Attached example file contains some content controls, which cause error message in the PAC tool.

1. Open attached file
2. File - Export - Export as PDF and check PDF/UA
3. Open the resulting file in the PAC tool

-> It complains about "Widget" annotation not nested inside a "Form" structure element

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 006b35d50024b1932d84380b5d2fec1f7066bccd
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-04-24 18:11:18 UTC
Created attachment 186891 [details]
The example file in Writer and its PDF version in PAC tool
Comment 2 Gabor Kelemen (Collabora) 2023-04-24 18:12:32 UTC
Created attachment 186892 [details]
Slightly changed up version of the document that is fine

Putting letters to the beginning seems to fix this.
Comment 3 Gabor Kelemen (Collabora) 2023-04-24 18:13:14 UTC
Created attachment 186893 [details]
The good example file in Writer and PAC tool
Comment 4 Buovjaga 2023-05-15 13:57:47 UTC
Repro with PAC tool

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2023-07-20 11:35:55 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/49dca4be647733507b2082a9c74187076a4a8d9b

tdf#154990 vcl: PDF export: incorrect checks of annotation struct parents

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2023-07-20 11:37:13 UTC
fixed on master
Comment 7 Commit Notification 2023-07-25 09:23:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/93088fef9373427fd36555375f731417f665b6dd

tdf#154990 vcl: PDF export: incorrect checks of annotation struct parents

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-07-31 20:17:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1e9407aec765e42a3deface23ffefb0db1e03706

tdf#154990 vcl: PDF export: incorrect checks of annotation struct parents

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.