tdf#154990 vcl: PDF export: incorrect checks of annotation struct parents

The first form annotation is missing /StructParent.

The invalid value is -1, not 0. Typically 0 is the index of the MCIDs
entry (m_aMCIDParents) in the ParentTree /Nums, but if there is not a
single MCID in the document, this is omitted and 0 may be a valid
annotation then.

Change-Id: I9885d176eae272d98000f9d9f0ffae82558c0ea0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154668
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>